supply-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estoque-nginx
  namespace: lab-tjce-bqzsv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: estoque-nginx
  template:
    metadata:
      labels:
        app: estoque-nginx
    spec:
      containers:
      - name: django-app # (pode manter o nome ou mudar para django-app)
        image: kaikeclear/estoque-app:v2
        ports:
        - containerPort: 8000
