supply-app/supply-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supply-app-service
  namespace: lab-tjce-bqzsv
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: supply-app
