supply-app/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: estoque-service
  namespace: lab-tjce-bqzsv
spec:
  selector:
    app: estoque-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: estoque-ingress
  namespace: lab-tjce-bqzsv
spec:
  rules:
  - host: estoque.meulab.local # You can map this in your Windows hosts file later
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: estoque-service
            port:
              number: 80
